@@ -1,5 +1,11 @@
 2008-07-13  Sam Steingold  <sds@gnu.org>
 
+	* init.lisp (search-file): list matching files from the FIRST
+	directory containing any matching file, because otherwise every
+	load will mean a full traversal of ~/lisp/**/
+
+2008-07-13  Sam Steingold  <sds@gnu.org>
+
 	* defs1.lisp (*load-logical-pathname-translations-database*):
 	since SEARCH-FILE now handles both files and directories
 	similarly, only one element is needed
